tests/fixtures/errors/map_get_while_iterate.z
# E0200: an iterator holds its map exclusively for its lifetime --
# no access, not even reads, while iterating. Use iterateItems for
# paired key+value views, or snapshot keys first.
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    with it: m.iterate do for k: it loop {
        v: m.get key: k.copy
        match (
            v
        ) case some then {
            print v
        } case none then {}
    }
}
